2008-08-22  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/37078
	* tree-vrp.c (extract_range_from_unary_expr): Avoid generating
	[+INF, +INF] ranges.

	* gcc.c-torture/compile/pr37078.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139501 138bc75d-0d04-0410-961f-82ee72b054a4