gcc/testsuite/gcc.c-torture/compile/pr37078.c
@@ -1,0 +1,6 @@
+int foo (int b)
+{
+  if (b == (int)0x80000000)
+    return __builtin_abs (b);
+  return 0;
+}
